# systemd-client

./: Cargo.toml
examples/: list_units_nonblocking.rs  start_service_nonblocking.rs
scripts/: gen-interface.sh
src/: lib.rs  templates.rs  utils.rs
src/manager/: proxy.rs
src/service/: proxy.rs
src/unit/: proxy.rs
tests/: test_list_units.rs
tests/resources/: test.service
