[package]
authors = ["Li Yu <li.yu.sh0211@gmail.com>"]
description = "systemd client library implemented with zbus"
documentation = "https://docs.rs/systemd-client/"
edition = "2021"
homepage = "https://github.com/51yu/systemd-client"
keywords = ["systemd", "zbus"]
license = "Apache-2.0"
name = "systemd_client"
repository = "https://github.com/51yu/systemd-client"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5"
thiserror = "1"
tracing = "0.1"
zbus = "3"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
